# pimage

./: .gitignore  AGENTS.md  A_FAIRE.md  GEMINI.md  PROGRESS.md  RAPPORT_ANALYSE.md  README.md  app_photo.py  config.json  config.yaml  enable_ro.sh  overlays.py  pimage.service  pyproject.toml  sync_photos.sh  ui_hud.py
.github/workflows/: ci.yml
docs/: PI4_SETUP.md
dossier_technique/: README.md
pimage/: __init__.py  __main__.py  cli.py  config.py  effects.py  logging_utils.py  storage.py
src/pimage_camera/: __init__.py  app.py  hardware.py  models.py  state.py
tests/: test_cli_smoke.py  test_config.py  test_effects.py  test_state.py  test_storage.py
